Réorganisation de l'éditeur pour les fichiers multiples